--- a/interfaces/drawing.drawingcontext.html
+++ b/interfaces/drawing.drawingcontext.html
@@ -464,7 +464,7 @@
 					<a name="placehighlight" class="tsd-anchor"></a>
 					<h3>place<wbr>Highlight</h3>
 					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-interface">
-						<li class="tsd-signature tsd-kind-icon">place<wbr>Highlight<span class="tsd-signature-symbol">(</span>highlight<span class="tsd-signature-symbol">: </span><a href="../classes/drawing.highlight.html" class="tsd-signature-type">Highlight</a>, settings<span class="tsd-signature-symbol">?: </span><a href="drawing.geometrydrawingsettingsdescription.html" class="tsd-signature-type">GeometryDrawingSettingsDescription</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span></li>
+						<li class="tsd-signature tsd-kind-icon">place<wbr>Highlight<span class="tsd-signature-symbol">(</span>highlight<span class="tsd-signature-symbol">: </span><a href="drawing.highlightdescription.html" class="tsd-signature-type">HighlightDescription</a>, settings<span class="tsd-signature-symbol">?: </span><a href="drawing.geometrydrawingsettingsdescription.html" class="tsd-signature-type">GeometryDrawingSettingsDescription</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
@@ -483,7 +483,7 @@
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
-									<h5>highlight: <a href="../classes/drawing.highlight.html" class="tsd-signature-type">Highlight</a></h5>
+									<h5>highlight: <a href="drawing.highlightdescription.html" class="tsd-signature-type">HighlightDescription</a></h5>
 								</li>
 								<li>
 									<h5><span class="tsd-flag ts-flagOptional">Optional</span> settings: <a href="drawing.geometrydrawingsettingsdescription.html" class="tsd-signature-type">GeometryDrawingSettingsDescription</a></h5>
