--- a/modules/events.html
+++ b/modules/events.html
@@ -119,7 +119,7 @@
 				<section class="tsd-panel tsd-member tsd-kind-type-alias tsd-parent-kind-external-module">
 					<a name="piwebevents" class="tsd-anchor"></a>
 					<h3>Pi<wbr>Web<wbr>Events</h3>
-					<div class="tsd-signature tsd-kind-icon">Pi<wbr>Web<wbr>Events<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"load"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"render"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"dataBindingChanged"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"dataChanged"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"prepare_render"</span></div>
+					<div class="tsd-signature tsd-kind-icon">Pi<wbr>Web<wbr>Events<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"load"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"render"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"dataBindingChanged"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"dataChanged"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"prepareRender"</span></div>
 					<aside class="tsd-sources">
 						<ul>
 							<li>Defined in events.ts:39</li>
