--- a/classes/drawing.bufferdrawingcontext.html
+++ b/classes/drawing.bufferdrawingcontext.html
@@ -160,7 +160,7 @@
 							<aside class="tsd-sources">
 								<p>Implementation of <a href="../interfaces/drawing.drawingcontext.html">DrawingContext</a>.<a href="../interfaces/drawing.drawingcontext.html#close">close</a></p>
 								<ul>
-									<li>Defined in drawing/drawing.ts:489</li>
+									<li>Defined in drawing/drawing.ts:496</li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
@@ -429,7 +429,7 @@
 					<a name="placehighlight" class="tsd-anchor"></a>
 					<h3>place<wbr>Highlight</h3>
 					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class tsd-is-not-exported">
-						<li class="tsd-signature tsd-kind-icon">place<wbr>Highlight<span class="tsd-signature-symbol">(</span>highlight<span class="tsd-signature-symbol">: </span><a href="drawing.highlight.html" class="tsd-signature-type">Highlight</a>, settings<span class="tsd-signature-symbol">?: </span><a href="../interfaces/drawing.geometrydrawingsettingsdescription.html" class="tsd-signature-type">GeometryDrawingSettingsDescription</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span></li>
+						<li class="tsd-signature tsd-kind-icon">place<wbr>Highlight<span class="tsd-signature-symbol">(</span>highlight<span class="tsd-signature-symbol">: </span><a href="../interfaces/drawing.highlightdescription.html" class="tsd-signature-type">HighlightDescription</a>, settings<span class="tsd-signature-symbol">?: </span><a href="../interfaces/drawing.geometrydrawingsettingsdescription.html" class="tsd-signature-type">GeometryDrawingSettingsDescription</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
@@ -442,7 +442,7 @@
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
-									<h5>highlight: <a href="drawing.highlight.html" class="tsd-signature-type">Highlight</a></h5>
+									<h5>highlight: <a href="../interfaces/drawing.highlightdescription.html" class="tsd-signature-type">HighlightDescription</a></h5>
 								</li>
 								<li>
 									<h5><span class="tsd-flag ts-flagOptional">Optional</span> settings: <a href="../interfaces/drawing.geometrydrawingsettingsdescription.html" class="tsd-signature-type">GeometryDrawingSettingsDescription</a></h5>
