--- a/interfaces/data.parsedpath.html
+++ b/interfaces/data.parsedpath.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>EventContext | PiWeb Customplot API Reference</title>
+	<title>ParsedPath | PiWeb Customplot API Reference</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
@@ -54,28 +54,24 @@
 					<a href="../globals.html">Globals</a>
 				</li>
 				<li>
-					<a href="../modules/events.html">events</a>
+					<a href="../modules/data.html">data</a>
 				</li>
 				<li>
-					<a href="events.eventcontext.html">EventContext</a>
+					<a href="data.parsedpath.html">ParsedPath</a>
 				</li>
 			</ul>
-			<h1>Class EventContext</h1>
+			<h1>Interface ParsedPath</h1>
 		</div>
 	</div>
 </header>
 <div class="container container-main">
 	<div class="row">
 		<div class="col-8 col-content">
-			<section class="tsd-panel tsd-comment">
-				<div class="tsd-comment tsd-typography">
-				</div>
-			</section>
 			<section class="tsd-panel tsd-hierarchy">
 				<h3>Hierarchy</h3>
 				<ul class="tsd-hierarchy">
 					<li>
-						<span class="target">EventContext</span>
+						<span class="target">ParsedPath</span>
 					</li>
 				</ul>
 			</section>
@@ -83,70 +79,79 @@
 				<h2>Index</h2>
 				<section class="tsd-panel tsd-index-panel">
 					<div class="tsd-index-content">
-						<section class="tsd-index-section tsd-is-not-exported">
+						<section class="tsd-index-section ">
 							<h3>Properties</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-property tsd-parent-kind-class tsd-is-not-exported"><a href="events.eventcontext.html#ondatabindingchanged" class="tsd-kind-icon">on<wbr>Data<wbr>Binding<wbr>Changed</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-class tsd-is-not-exported"><a href="events.eventcontext.html#ondatachanged" class="tsd-kind-icon">on<wbr>Data<wbr>Changed</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-class tsd-is-not-exported"><a href="events.eventcontext.html#onload" class="tsd-kind-icon">on<wbr>Load</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-class tsd-is-not-exported"><a href="events.eventcontext.html#onpreparerender" class="tsd-kind-icon">on<wbr>Prepare<wbr>Render</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-class tsd-is-not-exported"><a href="events.eventcontext.html#onrender" class="tsd-kind-icon">on<wbr>Render</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="data.parsedpath.html#base" class="tsd-kind-icon">base</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="data.parsedpath.html#ext" class="tsd-kind-icon">ext</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="data.parsedpath.html#name" class="tsd-kind-icon">name</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="data.parsedpath.html#parent" class="tsd-kind-icon">parent</a></li>
 							</ul>
 						</section>
 					</div>
 				</section>
 			</section>
-			<section class="tsd-panel-group tsd-member-group tsd-is-not-exported">
+			<section class="tsd-panel-group tsd-member-group ">
 				<h2>Properties</h2>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class tsd-is-not-exported">
-					<a name="ondatabindingchanged" class="tsd-anchor"></a>
-					<h3>on<wbr>Data<wbr>Binding<wbr>Changed</h3>
-					<div class="tsd-signature tsd-kind-icon">on<wbr>Data<wbr>Binding<wbr>Changed<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">Function</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol"> =&nbsp;[]</span></div>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
+					<a name="base" class="tsd-anchor"></a>
+					<h3>base</h3>
+					<div class="tsd-signature tsd-kind-icon">base<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in events.ts:64</li>
+							<li>Defined in data/path.ts:18</li>
 						</ul>
 					</aside>
+					<div class="tsd-comment tsd-typography">
+						<div class="lead">
+							<p>The name of the inspection plan entity including extension (if any) such as &#39;Point.X&#39;</p>
+						</div>
+					</div>
 				</section>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class tsd-is-not-exported">
-					<a name="ondatachanged" class="tsd-anchor"></a>
-					<h3>on<wbr>Data<wbr>Changed</h3>
-					<div class="tsd-signature tsd-kind-icon">on<wbr>Data<wbr>Changed<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">Function</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol"> =&nbsp;[]</span></div>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
+					<a name="ext" class="tsd-anchor"></a>
+					<h3>ext</h3>
+					<div class="tsd-signature tsd-kind-icon">ext<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in events.ts:63</li>
+							<li>Defined in data/path.ts:22</li>
 						</ul>
 					</aside>
+					<div class="tsd-comment tsd-typography">
+						<div class="lead">
+							<p>The extension (if any) such as &#39;.X&#39;</p>
+						</div>
+					</div>
 				</section>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class tsd-is-not-exported">
-					<a name="onload" class="tsd-anchor"></a>
-					<h3>on<wbr>Load</h3>
-					<div class="tsd-signature tsd-kind-icon">on<wbr>Load<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">Function</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol"> =&nbsp;[]</span></div>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
+					<a name="name" class="tsd-anchor"></a>
+					<h3>name</h3>
+					<div class="tsd-signature tsd-kind-icon">name<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in events.ts:62</li>
+							<li>Defined in data/path.ts:26</li>
 						</ul>
 					</aside>
+					<div class="tsd-comment tsd-typography">
+						<div class="lead">
+							<p>The inspection plan entity name without extension (if any) such as &#39;Point&#39;</p>
+						</div>
+					</div>
 				</section>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class tsd-is-not-exported">
-					<a name="onpreparerender" class="tsd-anchor"></a>
-					<h3>on<wbr>Prepare<wbr>Render</h3>
-					<div class="tsd-signature tsd-kind-icon">on<wbr>Prepare<wbr>Render<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">Function</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol"> =&nbsp;[]</span></div>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
+					<a name="parent" class="tsd-anchor"></a>
+					<h3>parent</h3>
+					<div class="tsd-signature tsd-kind-icon">parent<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in events.ts:60</li>
+							<li>Defined in data/path.ts:14</li>
 						</ul>
 					</aside>
-				</section>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class tsd-is-not-exported">
-					<a name="onrender" class="tsd-anchor"></a>
-					<h3>on<wbr>Render</h3>
-					<div class="tsd-signature tsd-kind-icon">on<wbr>Render<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">Function</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol"> =&nbsp;[]</span></div>
-					<aside class="tsd-sources">
-						<ul>
-							<li>Defined in events.ts:61</li>
-						</ul>
-					</aside>
+					<div class="tsd-comment tsd-typography">
+						<div class="lead">
+							<p>The full parent path such as &#39;/Part1/Part2/Point&#39;</p>
+						</div>
+					</div>
 				</section>
 			</section>
 		</div>
@@ -159,8 +164,13 @@
 					<li class=" tsd-kind-external-module">
 						<a href="../modules/index.html">Index</a>
 					</li>
-					<li class=" tsd-kind-external-module">
+					<li class="current tsd-kind-external-module">
 						<a href="../modules/data.html">data</a>
+						<ul>
+							<li class=" tsd-kind-module tsd-parent-kind-external-module">
+								<a href="../modules/data.wellknownkeys.html">Well<wbr>Known<wbr>Keys</a>
+							</li>
+						</ul>
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="../modules/drawing.html">drawing</a>
@@ -168,7 +178,7 @@
 					<li class=" tsd-kind-external-module">
 						<a href="../modules/environment.html">environment</a>
 					</li>
-					<li class="current tsd-kind-external-module">
+					<li class=" tsd-kind-external-module">
 						<a href="../modules/events.html">events</a>
 					</li>
 					<li class=" tsd-kind-external-module">
@@ -198,40 +208,25 @@
 				<ul class="before-current">
 				</ul>
 				<ul class="current">
-					<li class="current tsd-kind-class tsd-parent-kind-external-module tsd-is-private tsd-is-not-exported">
-						<a href="events.eventcontext.html" class="tsd-kind-icon">Event<wbr>Context</a>
+					<li class="current tsd-kind-interface tsd-parent-kind-external-module">
+						<a href="data.parsedpath.html" class="tsd-kind-icon">Parsed<wbr>Path</a>
 						<ul>
-							<li class=" tsd-kind-property tsd-parent-kind-class tsd-is-not-exported">
-								<a href="events.eventcontext.html#ondatabindingchanged" class="tsd-kind-icon">on<wbr>Data<wbr>Binding<wbr>Changed</a>
+							<li class=" tsd-kind-property tsd-parent-kind-interface">
+								<a href="data.parsedpath.html#base" class="tsd-kind-icon">base</a>
 							</li>
-							<li class=" tsd-kind-property tsd-parent-kind-class tsd-is-not-exported">
-								<a href="events.eventcontext.html#ondatachanged" class="tsd-kind-icon">on<wbr>Data<wbr>Changed</a>
+							<li class=" tsd-kind-property tsd-parent-kind-interface">
+								<a href="data.parsedpath.html#ext" class="tsd-kind-icon">ext</a>
 							</li>
-							<li class=" tsd-kind-property tsd-parent-kind-class tsd-is-not-exported">
-								<a href="events.eventcontext.html#onload" class="tsd-kind-icon">on<wbr>Load</a>
+							<li class=" tsd-kind-property tsd-parent-kind-interface">
+								<a href="data.parsedpath.html#name" class="tsd-kind-icon">name</a>
 							</li>
-							<li class=" tsd-kind-property tsd-parent-kind-class tsd-is-not-exported">
-								<a href="events.eventcontext.html#onpreparerender" class="tsd-kind-icon">on<wbr>Prepare<wbr>Render</a>
-							</li>
-							<li class=" tsd-kind-property tsd-parent-kind-class tsd-is-not-exported">
-								<a href="events.eventcontext.html#onrender" class="tsd-kind-icon">on<wbr>Render</a>
+							<li class=" tsd-kind-property tsd-parent-kind-interface">
+								<a href="data.parsedpath.html#parent" class="tsd-kind-icon">parent</a>
 							</li>
 						</ul>
 					</li>
 				</ul>
 				<ul class="after-current">
-					<li class=" tsd-kind-type-alias tsd-parent-kind-external-module">
-						<a href="../modules/events.html#piwebevents" class="tsd-kind-icon">Pi<wbr>Web<wbr>Events</a>
-					</li>
-					<li class=" tsd-kind-variable tsd-parent-kind-external-module tsd-is-private tsd-is-not-exported">
-						<a href="../modules/events.html#context" class="tsd-kind-icon">context</a>
-					</li>
-					<li class=" tsd-kind-function tsd-parent-kind-external-module tsd-is-private">
-						<a href="../modules/events.html#emit" class="tsd-kind-icon">emit</a>
-					</li>
-					<li class=" tsd-kind-function tsd-parent-kind-external-module">
-						<a href="../modules/events.html#on" class="tsd-kind-icon">on</a>
-					</li>
 				</ul>
 			</nav>
 		</div>
