--- a/modules/package.html
+++ b/modules/package.html
@@ -444,6 +444,11 @@
 								<td><img src="../media/colorpicker.png" alt="alt text" title="combobox"></td>
 							</tr>
 							<tr>
+								<td><strong><code>colorscheme</code></strong></td>
+								<td>Array of well composed colors</td>
+								<td><img src="../media/colorschemepicker.png" alt="alt text" title="combobox"></td>
+							</tr>
+							<tr>
 								<td><strong><code>brush</code></strong></td>
 								<td>Color or gradient with opacity</td>
 								<td><img src="../media/brushpicker.png" alt="alt text" title="combobox"></td>
