doc: found a way to remove the 'preferred' tag

--- a/modules/index.html
+++ b/modules/index.html
@@ -66,66 +66,63 @@
 		<div class="col-8 col-content">
 			<section class="tsd-panel tsd-comment">
 				<div class="tsd-comment tsd-typography">
-					<dl class="tsd-comment-tags">
-						<dt>preferred</dt>
-						<dd><p><br/></p>
-							<h2 id="index">Index</h2>
-							<h3 id="package-definition">Package definition</h3>
-							<p>For a complete description of the PiWeb custom-plot extension format, please refer to the <a href="package.html">package</a> chapter.</p>
-							<h3 id="modules">Modules</h3>
-							<p>The PiWeb custom plot API has a root module named <code>piweb</code> which encapsulates all child modules. The following child modules are available:</p>
-							<table>
-								<thead>
-									<tr>
-										<th>Module</th>
-										<th>Description</th>
-									</tr>
-								</thead>
-								<tbody>
-									<tr>
-										<td><a href="data.html"><strong><code>data</code></strong></a></td>
-										<td>Access the databinding of the plot element</td>
-									</tr>
-									<tr>
-										<td><a href="drawing.html"><strong><code>drawing</code></strong></a></td>
-										<td>Draw the content of the custom plot element</td>
-									</tr>
-									<tr>
-										<td><a href="environment.html"><strong><code>environment</code></strong></a></td>
-										<td>Access settings of the PiWeb host application</td>
-									</tr>
-									<tr>
-										<td><a href="events.html"><strong><code>events</code></strong></a></td>
-										<td>React to events emitted by the PiWeb host application</td>
-									</tr>
-									<tr>
-										<td><a href="expressions.html"><strong><code>expressions</code></strong></a></td>
-										<td>Evaluate system variable expressions</td>
-									</tr>
-									<tr>
-										<td><a href="format.html"><strong><code>format</code></strong></a></td>
-										<td>Read and write localized data</td>
-									</tr>
-									<tr>
-										<td><a href="logger.html"><strong><code>logger</code></strong></a></td>
-										<td>Write entries into the piweb log</td>
-									</tr>
-									<tr>
-										<td><a href="properties.html"><strong><code>properties</code></strong></a></td>
-										<td>Access the custom plot elements property grid</td>
-									</tr>
-									<tr>
-										<td><a href="resources.html"><strong><code>resources</code></strong></a></td>
-										<td>Access resources that are located in the extension package</td>
-									</tr>
-									<tr>
-										<td><a href="tooltips.html"><strong><code>tooltips</code></strong></a></td>
-										<td>Create tooltip content for the PiWeb Monitor info mode</td>
-									</tr>
-								</tbody>
-							</table>
-						</dd>
-					</dl>
+					<div class="lead">
+						<h2 id="index">Index</h2>
+					</div>
+					<h3 id="package-definition">Package definition</h3>
+					<p>For a complete description of the PiWeb custom-plot extension format, please refer to the <a href="package.html">package</a> chapter.</p>
+					<h3 id="modules">Modules</h3>
+					<p>The PiWeb custom plot API has a root module named <code>piweb</code> which encapsulates all child modules. The following child modules are available:</p>
+					<table>
+						<thead>
+							<tr>
+								<th>Module</th>
+								<th>Description</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<td><a href="data.html"><strong><code>data</code></strong></a></td>
+								<td>Access the databinding of the plot element</td>
+							</tr>
+							<tr>
+								<td><a href="drawing.html"><strong><code>drawing</code></strong></a></td>
+								<td>Draw the content of the custom plot element</td>
+							</tr>
+							<tr>
+								<td><a href="environment.html"><strong><code>environment</code></strong></a></td>
+								<td>Access settings of the PiWeb host application</td>
+							</tr>
+							<tr>
+								<td><a href="events.html"><strong><code>events</code></strong></a></td>
+								<td>React to events emitted by the PiWeb host application</td>
+							</tr>
+							<tr>
+								<td><a href="expressions.html"><strong><code>expressions</code></strong></a></td>
+								<td>Evaluate system variable expressions</td>
+							</tr>
+							<tr>
+								<td><a href="format.html"><strong><code>format</code></strong></a></td>
+								<td>Read and write localized data</td>
+							</tr>
+							<tr>
+								<td><a href="logger.html"><strong><code>logger</code></strong></a></td>
+								<td>Write entries into the piweb log</td>
+							</tr>
+							<tr>
+								<td><a href="properties.html"><strong><code>properties</code></strong></a></td>
+								<td>Access the custom plot elements property grid</td>
+							</tr>
+							<tr>
+								<td><a href="resources.html"><strong><code>resources</code></strong></a></td>
+								<td>Access resources that are located in the extension package</td>
+							</tr>
+							<tr>
+								<td><a href="tooltips.html"><strong><code>tooltips</code></strong></a></td>
+								<td>Create tooltip content for the PiWeb Monitor info mode</td>
+							</tr>
+						</tbody>
+					</table>
 				</div>
 			</section>
 		</div>
