doc: updated documentation to plot API 1.1

--- a/modules/package.html
+++ b/modules/package.html
@@ -509,8 +509,7 @@
 					<p><strong><code>pen</code></strong></p>
 					<pre><code class="lang-json">&quot;default_value&quot;: {
     &quot;color&quot;: &quot;#ff0000&quot;,
-    &quot;thickness&quot;: 0.3,     // Millimeters
-    &quot;dashStyle&quot;: &quot;Solid&quot; // [Solid, Dash, Dot, DashDot, DashDotDot]
+    &quot;thickness&quot; 0.3     // Millimeters
 }
 </code></pre>
 					<p>Only pens with solid color and thickness are accepted.</p>
