--- a/classes/data.defect.html
+++ b/classes/data.defect.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>RegionInfo | PiWeb Plot Extension API Reference</title>
+	<title>Defect | PiWeb Plot Extension API Reference</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
@@ -54,13 +54,13 @@
 					<a href="../globals.html">Globals</a>
 				</li>
 				<li>
-					<a href="../modules/environment.html">environment</a>
+					<a href="../modules/data.html">data</a>
 				</li>
 				<li>
-					<a href="environment.regioninfo.html">RegionInfo</a>
+					<a href="data.defect.html">Defect</a>
 				</li>
 			</ul>
-			<h1>Class RegionInfo</h1>
+			<h1>Class Defect</h1>
 		</div>
 	</div>
 </header>
@@ -70,7 +70,7 @@
 			<section class="tsd-panel tsd-comment">
 				<div class="tsd-comment tsd-typography">
 					<div class="lead">
-						<p>Contains the identifiers of a specific country or region.</p>
+						<p>Represents a defect</p>
 					</div>
 				</div>
 			</section>
@@ -78,70 +78,77 @@
 				<h3>Hierarchy</h3>
 				<ul class="tsd-hierarchy">
 					<li>
-						<span class="target">RegionInfo</span>
+						<span class="target">Defect</span>
 					</li>
-				</ul>
-			</section>
-			<section class="tsd-panel">
-				<h3>Implements</h3>
-				<ul class="tsd-hierarchy">
-					<li><a href="../interfaces/environment.iregioninfo.html" class="tsd-signature-type">IRegionInfo</a></li>
 				</ul>
 			</section>
 			<section class="tsd-panel-group tsd-index-group">
 				<h2>Index</h2>
 				<section class="tsd-panel tsd-index-panel">
 					<div class="tsd-index-content">
-						<section class="tsd-index-section ">
+						<section class="tsd-index-section tsd-is-private tsd-is-private-protected">
 							<h3>Constructors</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-constructor tsd-parent-kind-class"><a href="environment.regioninfo.html#constructor" class="tsd-kind-icon">constructor</a></li>
+								<li class="tsd-kind-constructor tsd-parent-kind-class tsd-is-private"><a href="data.defect.html#constructor" class="tsd-kind-icon">constructor</a></li>
 							</ul>
 						</section>
 						<section class="tsd-index-section ">
 							<h3>Properties</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-property tsd-parent-kind-class"><a href="environment.regioninfo.html#name" class="tsd-kind-icon">name</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-class"><a href="environment.regioninfo.html#threeletterisoregionname" class="tsd-kind-icon">three<wbr>LetterISORegion<wbr>Name</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-class"><a href="environment.regioninfo.html#twoletterisoregionname" class="tsd-kind-icon">two<wbr>LetterISORegion<wbr>Name</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-class tsd-is-static"><a href="environment.regioninfo.html#currentregion" class="tsd-kind-icon">current<wbr>Region</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-class"><a href="data.defect.html#index" class="tsd-kind-icon">index</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-class"><a href="data.defect.html#plot" class="tsd-kind-icon">plot</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-class"><a href="data.defect.html#position" class="tsd-kind-icon">position</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-class"><a href="data.defect.html#properties" class="tsd-kind-icon">properties</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-class"><a href="data.defect.html#size" class="tsd-kind-icon">size</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-class"><a href="data.defect.html#tolerance" class="tsd-kind-icon">tolerance</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-class"><a href="data.defect.html#voxels" class="tsd-kind-icon">voxels</a></li>
 							</ul>
 						</section>
 					</div>
 				</section>
 			</section>
-			<section class="tsd-panel-group tsd-member-group ">
+			<section class="tsd-panel-group tsd-member-group tsd-is-private tsd-is-private-protected">
 				<h2>Constructors</h2>
-				<section class="tsd-panel tsd-member tsd-kind-constructor tsd-parent-kind-class">
+				<section class="tsd-panel tsd-member tsd-kind-constructor tsd-parent-kind-class tsd-is-private">
 					<a name="constructor" class="tsd-anchor"></a>
-					<h3>constructor</h3>
-					<ul class="tsd-signatures tsd-kind-constructor tsd-parent-kind-class">
-						<li class="tsd-signature tsd-kind-icon">new <wbr>Region<wbr>Info<span class="tsd-signature-symbol">(</span>name<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="environment.regioninfo.html" class="tsd-signature-type">RegionInfo</a></li>
+					<h3><span class="tsd-flag ts-flagPrivate">Private</span> constructor</h3>
+					<ul class="tsd-signatures tsd-kind-constructor tsd-parent-kind-class tsd-is-private">
+						<li class="tsd-signature tsd-kind-icon">new <wbr>Defect<span class="tsd-signature-symbol">(</span>plot<span class="tsd-signature-symbol">: </span><a href="data.defectplot.html" class="tsd-signature-type">DefectPlot</a>, index<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">number</span>, position<span class="tsd-signature-symbol">: </span><a href="data.vector.html" class="tsd-signature-type">Vector</a>, size<span class="tsd-signature-symbol">: </span><a href="data.vector.html" class="tsd-signature-type">Vector</a>, tolerance<span class="tsd-signature-symbol">: </span><a href="data.plottolerance.html" class="tsd-signature-type">PlotTolerance</a><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">undefined</span>, properties<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Map</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">, </span><a href="data.plotproperty.html" class="tsd-signature-type">PlotProperty</a><span class="tsd-signature-symbol">&gt;</span>, voxels<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Iterable</span><span class="tsd-signature-symbol">&lt;</span><a href="data.voxel.html" class="tsd-signature-type">Voxel</a><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="data.defect.html" class="tsd-signature-type">Defect</a></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in environment.ts:304</li>
+									<li>Defined in data/defect.ts:61</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
-								<div class="lead">
-									<p>Initializes a new instance of the <a href="environment.regioninfo.html">RegionInfo</a> class.</p>
-								</div>
 							</div>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
-									<h5>name: <span class="tsd-signature-type">string</span></h5>
-									<div class="tsd-comment tsd-typography">
-										<div class="lead">
-											<p>The name of the region.</p>
-										</div>
-									</div>
+									<h5>plot: <a href="data.defectplot.html" class="tsd-signature-type">DefectPlot</a></h5>
+								</li>
+								<li>
+									<h5>index: <span class="tsd-signature-type">number</span></h5>
+								</li>
+								<li>
+									<h5>position: <a href="data.vector.html" class="tsd-signature-type">Vector</a></h5>
+								</li>
+								<li>
+									<h5>size: <a href="data.vector.html" class="tsd-signature-type">Vector</a></h5>
+								</li>
+								<li>
+									<h5>tolerance: <a href="data.plottolerance.html" class="tsd-signature-type">PlotTolerance</a><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">undefined</span></h5>
+								</li>
+								<li>
+									<h5>properties: <span class="tsd-signature-type">Map</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">, </span><a href="data.plotproperty.html" class="tsd-signature-type">PlotProperty</a><span class="tsd-signature-symbol">&gt;</span></h5>
+								</li>
+								<li>
+									<h5>voxels: <span class="tsd-signature-type">Iterable</span><span class="tsd-signature-symbol">&lt;</span><a href="data.voxel.html" class="tsd-signature-type">Voxel</a><span class="tsd-signature-symbol">&gt;</span></h5>
 								</li>
 							</ul>
-							<h4 class="tsd-returns-title">Returns <a href="environment.regioninfo.html" class="tsd-signature-type">RegionInfo</a></h4>
+							<h4 class="tsd-returns-title">Returns <a href="data.defect.html" class="tsd-signature-type">Defect</a></h4>
 						</li>
 					</ul>
 				</section>
@@ -149,65 +156,107 @@
 			<section class="tsd-panel-group tsd-member-group ">
 				<h2>Properties</h2>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class">
-					<a name="name" class="tsd-anchor"></a>
-					<h3>name</h3>
-					<div class="tsd-signature tsd-kind-icon">name<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
+					<a name="index" class="tsd-anchor"></a>
+					<h3>index</h3>
+					<div class="tsd-signature tsd-kind-icon">index<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
 					<aside class="tsd-sources">
-						<p>Implementation of <a href="../interfaces/environment.iregioninfo.html">IRegionInfo</a>.<a href="../interfaces/environment.iregioninfo.html#name">name</a></p>
 						<ul>
-							<li>Defined in environment.ts:294</li>
+							<li>Defined in data/defect.ts:84</li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
 						<div class="lead">
-							<p>Gets the name or ISO 3166 two-letter country/region code.</p>
+							<p>The index of the voxel in the list of voxels of the defect plot.</p>
 						</div>
 					</div>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class">
-					<a name="threeletterisoregionname" class="tsd-anchor"></a>
-					<h3>three<wbr>LetterISORegion<wbr>Name</h3>
-					<div class="tsd-signature tsd-kind-icon">three<wbr>LetterISORegion<wbr>Name<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
+					<a name="plot" class="tsd-anchor"></a>
+					<h3>plot</h3>
+					<div class="tsd-signature tsd-kind-icon">plot<span class="tsd-signature-symbol">:</span> <a href="data.defectplot.html" class="tsd-signature-type">DefectPlot</a></div>
 					<aside class="tsd-sources">
-						<p>Implementation of <a href="../interfaces/environment.iregioninfo.html">IRegionInfo</a>.<a href="../interfaces/environment.iregioninfo.html#threeletterisoregionname">threeLetterISORegionName</a></p>
 						<ul>
-							<li>Defined in environment.ts:304</li>
+							<li>Defined in data/defect.ts:79</li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
 						<div class="lead">
-							<p>Gets the three-letter code defined in ISO 3166 for the country/region.</p>
+							<p>The plot to which this defect is attached. Can be used to obtain the reference system and global tolerances, etc..</p>
 						</div>
 					</div>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class">
-					<a name="twoletterisoregionname" class="tsd-anchor"></a>
-					<h3>two<wbr>LetterISORegion<wbr>Name</h3>
-					<div class="tsd-signature tsd-kind-icon">two<wbr>LetterISORegion<wbr>Name<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
+					<a name="position" class="tsd-anchor"></a>
+					<h3>position</h3>
+					<div class="tsd-signature tsd-kind-icon">position<span class="tsd-signature-symbol">:</span> <a href="data.vector.html" class="tsd-signature-type">Vector</a></div>
 					<aside class="tsd-sources">
-						<p>Implementation of <a href="../interfaces/environment.iregioninfo.html">IRegionInfo</a>.<a href="../interfaces/environment.iregioninfo.html#twoletterisoregionname">twoLetterISORegionName</a></p>
 						<ul>
-							<li>Defined in environment.ts:299</li>
+							<li>Defined in data/defect.ts:89</li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
 						<div class="lead">
-							<p>Gets the two-letter code defined in ISO 3166 for the country/region.</p>
+							<p>The corner of the defects bounding box that is closest to the origin.</p>
 						</div>
 					</div>
 				</section>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class tsd-is-static">
-					<a name="currentregion" class="tsd-anchor"></a>
-					<h3><span class="tsd-flag ts-flagStatic">Static</span> current<wbr>Region</h3>
-					<div class="tsd-signature tsd-kind-icon">current<wbr>Region<span class="tsd-signature-symbol">:</span> <a href="../interfaces/environment.iregioninfo.html" class="tsd-signature-type">IRegionInfo</a><span class="tsd-signature-symbol"> =&nbsp;new SystemRegionInfo(currentNativeRegion.Name, currentNativeRegion.TwoLetterISORegionName, currentNativeRegion.ThreeLetterISORegionName)</span></div>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class">
+					<a name="properties" class="tsd-anchor"></a>
+					<h3>properties</h3>
+					<div class="tsd-signature tsd-kind-icon">properties<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">Map</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">, </span><a href="data.plotproperty.html" class="tsd-signature-type">PlotProperty</a><span class="tsd-signature-symbol">&gt;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in environment.ts:289</li>
+							<li>Defined in data/defect.ts:104</li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
 						<div class="lead">
-							<p>Gets the region in which the host application was started.</p>
+							<p>The list of custom key value pairs of this defect</p>
+						</div>
+					</div>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class">
+					<a name="size" class="tsd-anchor"></a>
+					<h3>size</h3>
+					<div class="tsd-signature tsd-kind-icon">size<span class="tsd-signature-symbol">:</span> <a href="data.vector.html" class="tsd-signature-type">Vector</a></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in data/defect.ts:94</li>
+						</ul>
+					</aside>
+					<div class="tsd-comment tsd-typography">
+						<div class="lead">
+							<p>The size of the defects bounding box.</p>
+						</div>
+					</div>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class">
+					<a name="tolerance" class="tsd-anchor"></a>
+					<h3>tolerance</h3>
+					<div class="tsd-signature tsd-kind-icon">tolerance<span class="tsd-signature-symbol">:</span> <a href="data.plottolerance.html" class="tsd-signature-type">PlotTolerance</a><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">undefined</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in data/defect.ts:99</li>
+						</ul>
+					</aside>
+					<div class="tsd-comment tsd-typography">
+						<div class="lead">
+							<p>The tolerance for this defect. If <code>undefined</code>, there&#39;s still a tolerance property on the <a href="data.defectplot.html">DefectPlot</a>.</p>
+						</div>
+					</div>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class">
+					<a name="voxels" class="tsd-anchor"></a>
+					<h3>voxels</h3>
+					<div class="tsd-signature tsd-kind-icon">voxels<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">Iterable</span><span class="tsd-signature-symbol">&lt;</span><a href="data.voxel.html" class="tsd-signature-type">Voxel</a><span class="tsd-signature-symbol">&gt;</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in data/defect.ts:109</li>
+						</ul>
+					</aside>
+					<div class="tsd-comment tsd-typography">
+						<div class="lead">
+							<p>The voxels that define this defect.</p>
 						</div>
 					</div>
 				</section>
@@ -222,13 +271,18 @@
 					<li class=" tsd-kind-external-module">
 						<a href="../modules/index.html">Index</a>
 					</li>
-					<li class=" tsd-kind-external-module">
+					<li class="current tsd-kind-external-module">
 						<a href="../modules/data.html">data</a>
+						<ul>
+							<li class=" tsd-kind-module tsd-parent-kind-external-module">
+								<a href="../modules/data.wellknownkeys.html">Well<wbr>Known<wbr>Keys</a>
+							</li>
+						</ul>
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="../modules/drawing.html">drawing</a>
 					</li>
-					<li class="current tsd-kind-external-module">
+					<li class=" tsd-kind-external-module">
 						<a href="../modules/environment.html">environment</a>
 					</li>
 					<li class=" tsd-kind-external-module">
@@ -262,22 +316,31 @@
 				</ul>
 				<ul class="current">
 					<li class="current tsd-kind-class tsd-parent-kind-external-module">
-						<a href="environment.regioninfo.html" class="tsd-kind-icon">Region<wbr>Info</a>
+						<a href="data.defect.html" class="tsd-kind-icon">Defect</a>
 						<ul>
-							<li class=" tsd-kind-constructor tsd-parent-kind-class">
-								<a href="environment.regioninfo.html#constructor" class="tsd-kind-icon">constructor</a>
+							<li class=" tsd-kind-constructor tsd-parent-kind-class tsd-is-private">
+								<a href="data.defect.html#constructor" class="tsd-kind-icon">constructor</a>
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-class">
-								<a href="environment.regioninfo.html#name" class="tsd-kind-icon">name</a>
+								<a href="data.defect.html#index" class="tsd-kind-icon">index</a>
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-class">
-								<a href="environment.regioninfo.html#threeletterisoregionname" class="tsd-kind-icon">three<wbr>LetterISORegion<wbr>Name</a>
+								<a href="data.defect.html#plot" class="tsd-kind-icon">plot</a>
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-class">
-								<a href="environment.regioninfo.html#twoletterisoregionname" class="tsd-kind-icon">two<wbr>LetterISORegion<wbr>Name</a>
+								<a href="data.defect.html#position" class="tsd-kind-icon">position</a>
 							</li>
-							<li class=" tsd-kind-property tsd-parent-kind-class tsd-is-static">
-								<a href="environment.regioninfo.html#currentregion" class="tsd-kind-icon">current<wbr>Region</a>
+							<li class=" tsd-kind-property tsd-parent-kind-class">
+								<a href="data.defect.html#properties" class="tsd-kind-icon">properties</a>
+							</li>
+							<li class=" tsd-kind-property tsd-parent-kind-class">
+								<a href="data.defect.html#size" class="tsd-kind-icon">size</a>
+							</li>
+							<li class=" tsd-kind-property tsd-parent-kind-class">
+								<a href="data.defect.html#tolerance" class="tsd-kind-icon">tolerance</a>
+							</li>
+							<li class=" tsd-kind-property tsd-parent-kind-class">
+								<a href="data.defect.html#voxels" class="tsd-kind-icon">voxels</a>
 							</li>
 						</ul>
 					</li>
