--- a/classes/data.plotproperty.html
+++ b/classes/data.plotproperty.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>RegionInfo | PiWeb Plot Extension API Reference</title>
+	<title>PlotProperty | PiWeb Plot Extension API Reference</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
@@ -54,13 +54,13 @@
 					<a href="../globals.html">Globals</a>
 				</li>
 				<li>
-					<a href="../modules/environment.html">environment</a>
+					<a href="../modules/data.html">data</a>
 				</li>
 				<li>
-					<a href="environment.regioninfo.html">RegionInfo</a>
+					<a href="data.plotproperty.html">PlotProperty</a>
 				</li>
 			</ul>
-			<h1>Class RegionInfo</h1>
+			<h1>Class PlotProperty</h1>
 		</div>
 	</div>
 </header>
@@ -70,7 +70,7 @@
 			<section class="tsd-panel tsd-comment">
 				<div class="tsd-comment tsd-typography">
 					<div class="lead">
-						<p>Contains the identifiers of a specific country or region.</p>
+						<p>A key-value pair to store additional data in plots or plotpoints.</p>
 					</div>
 				</div>
 			</section>
@@ -78,14 +78,8 @@
 				<h3>Hierarchy</h3>
 				<ul class="tsd-hierarchy">
 					<li>
-						<span class="target">RegionInfo</span>
+						<span class="target">PlotProperty</span>
 					</li>
-				</ul>
-			</section>
-			<section class="tsd-panel">
-				<h3>Implements</h3>
-				<ul class="tsd-hierarchy">
-					<li><a href="../interfaces/environment.iregioninfo.html" class="tsd-signature-type">IRegionInfo</a></li>
 				</ul>
 			</section>
 			<section class="tsd-panel-group tsd-index-group">
@@ -95,16 +89,16 @@
 						<section class="tsd-index-section ">
 							<h3>Constructors</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-constructor tsd-parent-kind-class"><a href="environment.regioninfo.html#constructor" class="tsd-kind-icon">constructor</a></li>
+								<li class="tsd-kind-constructor tsd-parent-kind-class"><a href="data.plotproperty.html#constructor" class="tsd-kind-icon">constructor</a></li>
 							</ul>
 						</section>
 						<section class="tsd-index-section ">
 							<h3>Properties</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-property tsd-parent-kind-class"><a href="environment.regioninfo.html#name" class="tsd-kind-icon">name</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-class"><a href="environment.regioninfo.html#threeletterisoregionname" class="tsd-kind-icon">three<wbr>LetterISORegion<wbr>Name</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-class"><a href="environment.regioninfo.html#twoletterisoregionname" class="tsd-kind-icon">two<wbr>LetterISORegion<wbr>Name</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-class tsd-is-static"><a href="environment.regioninfo.html#currentregion" class="tsd-kind-icon">current<wbr>Region</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-class"><a href="data.plotproperty.html#description" class="tsd-kind-icon">description</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-class"><a href="data.plotproperty.html#name" class="tsd-kind-icon">name</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-class"><a href="data.plotproperty.html#type" class="tsd-kind-icon">type</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-class"><a href="data.plotproperty.html#value" class="tsd-kind-icon">value</a></li>
 							</ul>
 						</section>
 					</div>
@@ -116,32 +110,31 @@
 					<a name="constructor" class="tsd-anchor"></a>
 					<h3>constructor</h3>
 					<ul class="tsd-signatures tsd-kind-constructor tsd-parent-kind-class">
-						<li class="tsd-signature tsd-kind-icon">new <wbr>Region<wbr>Info<span class="tsd-signature-symbol">(</span>name<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="environment.regioninfo.html" class="tsd-signature-type">RegionInfo</a></li>
+						<li class="tsd-signature tsd-kind-icon">new <wbr>Plot<wbr>Property<span class="tsd-signature-symbol">(</span>name<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span>, description<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span>, type<span class="tsd-signature-symbol">: </span><a href="../modules/data.html#plotpropertytype" class="tsd-signature-type">PlotPropertyType</a>, value<span class="tsd-signature-symbol">: </span><a href="../modules/data.html#plotpropertyvalue" class="tsd-signature-type">PlotPropertyValue</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="data.plotproperty.html" class="tsd-signature-type">PlotProperty</a></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in environment.ts:304</li>
+									<li>Defined in data/plot.ts:199</li>
 								</ul>
 							</aside>
-							<div class="tsd-comment tsd-typography">
-								<div class="lead">
-									<p>Initializes a new instance of the <a href="environment.regioninfo.html">RegionInfo</a> class.</p>
-								</div>
-							</div>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
 									<h5>name: <span class="tsd-signature-type">string</span></h5>
-									<div class="tsd-comment tsd-typography">
-										<div class="lead">
-											<p>The name of the region.</p>
-										</div>
-									</div>
+								</li>
+								<li>
+									<h5>description: <span class="tsd-signature-type">string</span></h5>
+								</li>
+								<li>
+									<h5>type: <a href="../modules/data.html#plotpropertytype" class="tsd-signature-type">PlotPropertyType</a></h5>
+								</li>
+								<li>
+									<h5>value: <a href="../modules/data.html#plotpropertyvalue" class="tsd-signature-type">PlotPropertyValue</a></h5>
 								</li>
 							</ul>
-							<h4 class="tsd-returns-title">Returns <a href="environment.regioninfo.html" class="tsd-signature-type">RegionInfo</a></h4>
+							<h4 class="tsd-returns-title">Returns <a href="data.plotproperty.html" class="tsd-signature-type">PlotProperty</a></h4>
 						</li>
 					</ul>
 				</section>
@@ -149,67 +142,44 @@
 			<section class="tsd-panel-group tsd-member-group ">
 				<h2>Properties</h2>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class">
+					<a name="description" class="tsd-anchor"></a>
+					<h3>description</h3>
+					<div class="tsd-signature tsd-kind-icon">description<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in data/plot.ts:209</li>
+						</ul>
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class">
 					<a name="name" class="tsd-anchor"></a>
 					<h3>name</h3>
 					<div class="tsd-signature tsd-kind-icon">name<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
-						<p>Implementation of <a href="../interfaces/environment.iregioninfo.html">IRegionInfo</a>.<a href="../interfaces/environment.iregioninfo.html#name">name</a></p>
 						<ul>
-							<li>Defined in environment.ts:294</li>
+							<li>Defined in data/plot.ts:208</li>
 						</ul>
 					</aside>
-					<div class="tsd-comment tsd-typography">
-						<div class="lead">
-							<p>Gets the name or ISO 3166 two-letter country/region code.</p>
-						</div>
-					</div>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class">
-					<a name="threeletterisoregionname" class="tsd-anchor"></a>
-					<h3>three<wbr>LetterISORegion<wbr>Name</h3>
-					<div class="tsd-signature tsd-kind-icon">three<wbr>LetterISORegion<wbr>Name<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
+					<a name="type" class="tsd-anchor"></a>
+					<h3>type</h3>
+					<div class="tsd-signature tsd-kind-icon">type<span class="tsd-signature-symbol">:</span> <a href="../modules/data.html#plotpropertytype" class="tsd-signature-type">PlotPropertyType</a></div>
 					<aside class="tsd-sources">
-						<p>Implementation of <a href="../interfaces/environment.iregioninfo.html">IRegionInfo</a>.<a href="../interfaces/environment.iregioninfo.html#threeletterisoregionname">threeLetterISORegionName</a></p>
 						<ul>
-							<li>Defined in environment.ts:304</li>
+							<li>Defined in data/plot.ts:211</li>
 						</ul>
 					</aside>
-					<div class="tsd-comment tsd-typography">
-						<div class="lead">
-							<p>Gets the three-letter code defined in ISO 3166 for the country/region.</p>
-						</div>
-					</div>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class">
-					<a name="twoletterisoregionname" class="tsd-anchor"></a>
-					<h3>two<wbr>LetterISORegion<wbr>Name</h3>
-					<div class="tsd-signature tsd-kind-icon">two<wbr>LetterISORegion<wbr>Name<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
-					<aside class="tsd-sources">
-						<p>Implementation of <a href="../interfaces/environment.iregioninfo.html">IRegionInfo</a>.<a href="../interfaces/environment.iregioninfo.html#twoletterisoregionname">twoLetterISORegionName</a></p>
-						<ul>
-							<li>Defined in environment.ts:299</li>
-						</ul>
-					</aside>
-					<div class="tsd-comment tsd-typography">
-						<div class="lead">
-							<p>Gets the two-letter code defined in ISO 3166 for the country/region.</p>
-						</div>
-					</div>
-				</section>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class tsd-is-static">
-					<a name="currentregion" class="tsd-anchor"></a>
-					<h3><span class="tsd-flag ts-flagStatic">Static</span> current<wbr>Region</h3>
-					<div class="tsd-signature tsd-kind-icon">current<wbr>Region<span class="tsd-signature-symbol">:</span> <a href="../interfaces/environment.iregioninfo.html" class="tsd-signature-type">IRegionInfo</a><span class="tsd-signature-symbol"> =&nbsp;new SystemRegionInfo(currentNativeRegion.Name, currentNativeRegion.TwoLetterISORegionName, currentNativeRegion.ThreeLetterISORegionName)</span></div>
+					<a name="value" class="tsd-anchor"></a>
+					<h3>value</h3>
+					<div class="tsd-signature tsd-kind-icon">value<span class="tsd-signature-symbol">:</span> <a href="../modules/data.html#plotpropertyvalue" class="tsd-signature-type">PlotPropertyValue</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in environment.ts:289</li>
+							<li>Defined in data/plot.ts:210</li>
 						</ul>
 					</aside>
-					<div class="tsd-comment tsd-typography">
-						<div class="lead">
-							<p>Gets the region in which the host application was started.</p>
-						</div>
-					</div>
 				</section>
 			</section>
 		</div>
@@ -222,13 +192,18 @@
 					<li class=" tsd-kind-external-module">
 						<a href="../modules/index.html">Index</a>
 					</li>
-					<li class=" tsd-kind-external-module">
+					<li class="current tsd-kind-external-module">
 						<a href="../modules/data.html">data</a>
+						<ul>
+							<li class=" tsd-kind-module tsd-parent-kind-external-module">
+								<a href="../modules/data.wellknownkeys.html">Well<wbr>Known<wbr>Keys</a>
+							</li>
+						</ul>
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="../modules/drawing.html">drawing</a>
 					</li>
-					<li class="current tsd-kind-external-module">
+					<li class=" tsd-kind-external-module">
 						<a href="../modules/environment.html">environment</a>
 					</li>
 					<li class=" tsd-kind-external-module">
@@ -262,22 +237,22 @@
 				</ul>
 				<ul class="current">
 					<li class="current tsd-kind-class tsd-parent-kind-external-module">
-						<a href="environment.regioninfo.html" class="tsd-kind-icon">Region<wbr>Info</a>
+						<a href="data.plotproperty.html" class="tsd-kind-icon">Plot<wbr>Property</a>
 						<ul>
 							<li class=" tsd-kind-constructor tsd-parent-kind-class">
-								<a href="environment.regioninfo.html#constructor" class="tsd-kind-icon">constructor</a>
+								<a href="data.plotproperty.html#constructor" class="tsd-kind-icon">constructor</a>
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-class">
-								<a href="environment.regioninfo.html#name" class="tsd-kind-icon">name</a>
+								<a href="data.plotproperty.html#description" class="tsd-kind-icon">description</a>
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-class">
-								<a href="environment.regioninfo.html#threeletterisoregionname" class="tsd-kind-icon">three<wbr>LetterISORegion<wbr>Name</a>
+								<a href="data.plotproperty.html#name" class="tsd-kind-icon">name</a>
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-class">
-								<a href="environment.regioninfo.html#twoletterisoregionname" class="tsd-kind-icon">two<wbr>LetterISORegion<wbr>Name</a>
+								<a href="data.plotproperty.html#type" class="tsd-kind-icon">type</a>
 							</li>
-							<li class=" tsd-kind-property tsd-parent-kind-class tsd-is-static">
-								<a href="environment.regioninfo.html#currentregion" class="tsd-kind-icon">current<wbr>Region</a>
+							<li class=" tsd-kind-property tsd-parent-kind-class">
+								<a href="data.plotproperty.html#value" class="tsd-kind-icon">value</a>
 							</li>
 						</ul>
 					</li>
