--- a/classes/data.vector.html
+++ b/classes/data.vector.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>RegionInfo | PiWeb Plot Extension API Reference</title>
+	<title>Vector | PiWeb Plot Extension API Reference</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
@@ -54,13 +54,13 @@
 					<a href="../globals.html">Globals</a>
 				</li>
 				<li>
-					<a href="../modules/environment.html">environment</a>
+					<a href="../modules/data.html">data</a>
 				</li>
 				<li>
-					<a href="environment.regioninfo.html">RegionInfo</a>
+					<a href="data.vector.html">Vector</a>
 				</li>
 			</ul>
-			<h1>Class RegionInfo</h1>
+			<h1>Class Vector</h1>
 		</div>
 	</div>
 </header>
@@ -70,7 +70,7 @@
 			<section class="tsd-panel tsd-comment">
 				<div class="tsd-comment tsd-typography">
 					<div class="lead">
-						<p>Contains the identifiers of a specific country or region.</p>
+						<p>A vector is a tuple of three numbers that can act as position, size and direction.</p>
 					</div>
 				</div>
 			</section>
@@ -78,14 +78,8 @@
 				<h3>Hierarchy</h3>
 				<ul class="tsd-hierarchy">
 					<li>
-						<span class="target">RegionInfo</span>
+						<span class="target">Vector</span>
 					</li>
-				</ul>
-			</section>
-			<section class="tsd-panel">
-				<h3>Implements</h3>
-				<ul class="tsd-hierarchy">
-					<li><a href="../interfaces/environment.iregioninfo.html" class="tsd-signature-type">IRegionInfo</a></li>
 				</ul>
 			</section>
 			<section class="tsd-panel-group tsd-index-group">
@@ -95,16 +89,15 @@
 						<section class="tsd-index-section ">
 							<h3>Constructors</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-constructor tsd-parent-kind-class"><a href="environment.regioninfo.html#constructor" class="tsd-kind-icon">constructor</a></li>
+								<li class="tsd-kind-constructor tsd-parent-kind-class"><a href="data.vector.html#constructor" class="tsd-kind-icon">constructor</a></li>
 							</ul>
 						</section>
 						<section class="tsd-index-section ">
 							<h3>Properties</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-property tsd-parent-kind-class"><a href="environment.regioninfo.html#name" class="tsd-kind-icon">name</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-class"><a href="environment.regioninfo.html#threeletterisoregionname" class="tsd-kind-icon">three<wbr>LetterISORegion<wbr>Name</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-class"><a href="environment.regioninfo.html#twoletterisoregionname" class="tsd-kind-icon">two<wbr>LetterISORegion<wbr>Name</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-class tsd-is-static"><a href="environment.regioninfo.html#currentregion" class="tsd-kind-icon">current<wbr>Region</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-class"><a href="data.vector.html#x" class="tsd-kind-icon">x</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-class"><a href="data.vector.html#y" class="tsd-kind-icon">y</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-class"><a href="data.vector.html#z" class="tsd-kind-icon">z</a></li>
 							</ul>
 						</section>
 					</div>
@@ -116,32 +109,28 @@
 					<a name="constructor" class="tsd-anchor"></a>
 					<h3>constructor</h3>
 					<ul class="tsd-signatures tsd-kind-constructor tsd-parent-kind-class">
-						<li class="tsd-signature tsd-kind-icon">new <wbr>Region<wbr>Info<span class="tsd-signature-symbol">(</span>name<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="environment.regioninfo.html" class="tsd-signature-type">RegionInfo</a></li>
+						<li class="tsd-signature tsd-kind-icon">new <wbr>Vector<span class="tsd-signature-symbol">(</span>x<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">number</span>, y<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">number</span>, z<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">number</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="data.vector.html" class="tsd-signature-type">Vector</a></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in environment.ts:304</li>
+									<li>Defined in data/plot.ts:11</li>
 								</ul>
 							</aside>
-							<div class="tsd-comment tsd-typography">
-								<div class="lead">
-									<p>Initializes a new instance of the <a href="environment.regioninfo.html">RegionInfo</a> class.</p>
-								</div>
-							</div>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
-									<h5>name: <span class="tsd-signature-type">string</span></h5>
-									<div class="tsd-comment tsd-typography">
-										<div class="lead">
-											<p>The name of the region.</p>
-										</div>
-									</div>
+									<h5>x: <span class="tsd-signature-type">number</span></h5>
+								</li>
+								<li>
+									<h5>y: <span class="tsd-signature-type">number</span></h5>
+								</li>
+								<li>
+									<h5>z: <span class="tsd-signature-type">number</span></h5>
 								</li>
 							</ul>
-							<h4 class="tsd-returns-title">Returns <a href="environment.regioninfo.html" class="tsd-signature-type">RegionInfo</a></h4>
+							<h4 class="tsd-returns-title">Returns <a href="data.vector.html" class="tsd-signature-type">Vector</a></h4>
 						</li>
 					</ul>
 				</section>
@@ -149,65 +138,47 @@
 			<section class="tsd-panel-group tsd-member-group ">
 				<h2>Properties</h2>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class">
-					<a name="name" class="tsd-anchor"></a>
-					<h3>name</h3>
-					<div class="tsd-signature tsd-kind-icon">name<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
+					<a name="x" class="tsd-anchor"></a>
+					<h3>x</h3>
+					<div class="tsd-signature tsd-kind-icon">x<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
 					<aside class="tsd-sources">
-						<p>Implementation of <a href="../interfaces/environment.iregioninfo.html">IRegionInfo</a>.<a href="../interfaces/environment.iregioninfo.html#name">name</a></p>
 						<ul>
-							<li>Defined in environment.ts:294</li>
+							<li>Defined in data/plot.ts:21</li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
 						<div class="lead">
-							<p>Gets the name or ISO 3166 two-letter country/region code.</p>
+							<p>X-Coordinate.</p>
 						</div>
 					</div>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class">
-					<a name="threeletterisoregionname" class="tsd-anchor"></a>
-					<h3>three<wbr>LetterISORegion<wbr>Name</h3>
-					<div class="tsd-signature tsd-kind-icon">three<wbr>LetterISORegion<wbr>Name<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
+					<a name="y" class="tsd-anchor"></a>
+					<h3>y</h3>
+					<div class="tsd-signature tsd-kind-icon">y<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
 					<aside class="tsd-sources">
-						<p>Implementation of <a href="../interfaces/environment.iregioninfo.html">IRegionInfo</a>.<a href="../interfaces/environment.iregioninfo.html#threeletterisoregionname">threeLetterISORegionName</a></p>
 						<ul>
-							<li>Defined in environment.ts:304</li>
+							<li>Defined in data/plot.ts:26</li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
 						<div class="lead">
-							<p>Gets the three-letter code defined in ISO 3166 for the country/region.</p>
+							<p>Y-Coordinate.</p>
 						</div>
 					</div>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class">
-					<a name="twoletterisoregionname" class="tsd-anchor"></a>
-					<h3>two<wbr>LetterISORegion<wbr>Name</h3>
-					<div class="tsd-signature tsd-kind-icon">two<wbr>LetterISORegion<wbr>Name<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
+					<a name="z" class="tsd-anchor"></a>
+					<h3>z</h3>
+					<div class="tsd-signature tsd-kind-icon">z<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
 					<aside class="tsd-sources">
-						<p>Implementation of <a href="../interfaces/environment.iregioninfo.html">IRegionInfo</a>.<a href="../interfaces/environment.iregioninfo.html#twoletterisoregionname">twoLetterISORegionName</a></p>
 						<ul>
-							<li>Defined in environment.ts:299</li>
+							<li>Defined in data/plot.ts:31</li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
 						<div class="lead">
-							<p>Gets the two-letter code defined in ISO 3166 for the country/region.</p>
-						</div>
-					</div>
-				</section>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class tsd-is-static">
-					<a name="currentregion" class="tsd-anchor"></a>
-					<h3><span class="tsd-flag ts-flagStatic">Static</span> current<wbr>Region</h3>
-					<div class="tsd-signature tsd-kind-icon">current<wbr>Region<span class="tsd-signature-symbol">:</span> <a href="../interfaces/environment.iregioninfo.html" class="tsd-signature-type">IRegionInfo</a><span class="tsd-signature-symbol"> =&nbsp;new SystemRegionInfo(currentNativeRegion.Name, currentNativeRegion.TwoLetterISORegionName, currentNativeRegion.ThreeLetterISORegionName)</span></div>
-					<aside class="tsd-sources">
-						<ul>
-							<li>Defined in environment.ts:289</li>
-						</ul>
-					</aside>
-					<div class="tsd-comment tsd-typography">
-						<div class="lead">
-							<p>Gets the region in which the host application was started.</p>
+							<p>Z-Coordinate.</p>
 						</div>
 					</div>
 				</section>
@@ -222,13 +193,18 @@
 					<li class=" tsd-kind-external-module">
 						<a href="../modules/index.html">Index</a>
 					</li>
-					<li class=" tsd-kind-external-module">
+					<li class="current tsd-kind-external-module">
 						<a href="../modules/data.html">data</a>
+						<ul>
+							<li class=" tsd-kind-module tsd-parent-kind-external-module">
+								<a href="../modules/data.wellknownkeys.html">Well<wbr>Known<wbr>Keys</a>
+							</li>
+						</ul>
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="../modules/drawing.html">drawing</a>
 					</li>
-					<li class="current tsd-kind-external-module">
+					<li class=" tsd-kind-external-module">
 						<a href="../modules/environment.html">environment</a>
 					</li>
 					<li class=" tsd-kind-external-module">
@@ -262,22 +238,19 @@
 				</ul>
 				<ul class="current">
 					<li class="current tsd-kind-class tsd-parent-kind-external-module">
-						<a href="environment.regioninfo.html" class="tsd-kind-icon">Region<wbr>Info</a>
+						<a href="data.vector.html" class="tsd-kind-icon">Vector</a>
 						<ul>
 							<li class=" tsd-kind-constructor tsd-parent-kind-class">
-								<a href="environment.regioninfo.html#constructor" class="tsd-kind-icon">constructor</a>
+								<a href="data.vector.html#constructor" class="tsd-kind-icon">constructor</a>
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-class">
-								<a href="environment.regioninfo.html#name" class="tsd-kind-icon">name</a>
+								<a href="data.vector.html#x" class="tsd-kind-icon">x</a>
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-class">
-								<a href="environment.regioninfo.html#threeletterisoregionname" class="tsd-kind-icon">three<wbr>LetterISORegion<wbr>Name</a>
+								<a href="data.vector.html#y" class="tsd-kind-icon">y</a>
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-class">
-								<a href="environment.regioninfo.html#twoletterisoregionname" class="tsd-kind-icon">two<wbr>LetterISORegion<wbr>Name</a>
-							</li>
-							<li class=" tsd-kind-property tsd-parent-kind-class tsd-is-static">
-								<a href="environment.regioninfo.html#currentregion" class="tsd-kind-icon">current<wbr>Region</a>
+								<a href="data.vector.html#z" class="tsd-kind-icon">z</a>
 							</li>
 						</ul>
 					</li>
