--- a/enums/data.plottolerancetypeid.html
+++ b/enums/data.plottolerancetypeid.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>RegionInfo | PiWeb Plot Extension API Reference</title>
+	<title>PlotToleranceTypeId | PiWeb Plot Extension API Reference</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
@@ -54,13 +54,13 @@
 					<a href="../globals.html">Globals</a>
 				</li>
 				<li>
-					<a href="../modules/environment.html">environment</a>
+					<a href="../modules/data.html">data</a>
 				</li>
 				<li>
-					<a href="environment.regioninfo.html">RegionInfo</a>
+					<a href="data.plottolerancetypeid.html">PlotToleranceTypeId</a>
 				</li>
 			</ul>
-			<h1>Class RegionInfo</h1>
+			<h1>Enumeration PlotToleranceTypeId</h1>
 		</div>
 	</div>
 </header>
@@ -69,147 +69,65 @@
 		<div class="col-8 col-content">
 			<section class="tsd-panel tsd-comment">
 				<div class="tsd-comment tsd-typography">
-					<div class="lead">
-						<p>Contains the identifiers of a specific country or region.</p>
-					</div>
 				</div>
-			</section>
-			<section class="tsd-panel tsd-hierarchy">
-				<h3>Hierarchy</h3>
-				<ul class="tsd-hierarchy">
-					<li>
-						<span class="target">RegionInfo</span>
-					</li>
-				</ul>
-			</section>
-			<section class="tsd-panel">
-				<h3>Implements</h3>
-				<ul class="tsd-hierarchy">
-					<li><a href="../interfaces/environment.iregioninfo.html" class="tsd-signature-type">IRegionInfo</a></li>
-				</ul>
 			</section>
 			<section class="tsd-panel-group tsd-index-group">
 				<h2>Index</h2>
 				<section class="tsd-panel tsd-index-panel">
 					<div class="tsd-index-content">
 						<section class="tsd-index-section ">
-							<h3>Constructors</h3>
+							<h3>Enumeration members</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-constructor tsd-parent-kind-class"><a href="environment.regioninfo.html#constructor" class="tsd-kind-icon">constructor</a></li>
-							</ul>
-						</section>
-						<section class="tsd-index-section ">
-							<h3>Properties</h3>
-							<ul class="tsd-index-list">
-								<li class="tsd-kind-property tsd-parent-kind-class"><a href="environment.regioninfo.html#name" class="tsd-kind-icon">name</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-class"><a href="environment.regioninfo.html#threeletterisoregionname" class="tsd-kind-icon">three<wbr>LetterISORegion<wbr>Name</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-class"><a href="environment.regioninfo.html#twoletterisoregionname" class="tsd-kind-icon">two<wbr>LetterISORegion<wbr>Name</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-class tsd-is-static"><a href="environment.regioninfo.html#currentregion" class="tsd-kind-icon">current<wbr>Region</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="data.plottolerancetypeid.html#linear" class="tsd-kind-icon">Linear</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="data.plottolerancetypeid.html#radial" class="tsd-kind-icon">Radial</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="data.plottolerancetypeid.html#rectangular" class="tsd-kind-icon">Rectangular</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="data.plottolerancetypeid.html#spatial" class="tsd-kind-icon">Spatial</a></li>
 							</ul>
 						</section>
 					</div>
 				</section>
 			</section>
 			<section class="tsd-panel-group tsd-member-group ">
-				<h2>Constructors</h2>
-				<section class="tsd-panel tsd-member tsd-kind-constructor tsd-parent-kind-class">
-					<a name="constructor" class="tsd-anchor"></a>
-					<h3>constructor</h3>
-					<ul class="tsd-signatures tsd-kind-constructor tsd-parent-kind-class">
-						<li class="tsd-signature tsd-kind-icon">new <wbr>Region<wbr>Info<span class="tsd-signature-symbol">(</span>name<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="environment.regioninfo.html" class="tsd-signature-type">RegionInfo</a></li>
-					</ul>
-					<ul class="tsd-descriptions">
-						<li class="tsd-description">
-							<aside class="tsd-sources">
-								<ul>
-									<li>Defined in environment.ts:304</li>
-								</ul>
-							</aside>
-							<div class="tsd-comment tsd-typography">
-								<div class="lead">
-									<p>Initializes a new instance of the <a href="environment.regioninfo.html">RegionInfo</a> class.</p>
-								</div>
-							</div>
-							<h4 class="tsd-parameters-title">Parameters</h4>
-							<ul class="tsd-parameters">
-								<li>
-									<h5>name: <span class="tsd-signature-type">string</span></h5>
-									<div class="tsd-comment tsd-typography">
-										<div class="lead">
-											<p>The name of the region.</p>
-										</div>
-									</div>
-								</li>
-							</ul>
-							<h4 class="tsd-returns-title">Returns <a href="environment.regioninfo.html" class="tsd-signature-type">RegionInfo</a></h4>
-						</li>
-					</ul>
-				</section>
-			</section>
-			<section class="tsd-panel-group tsd-member-group ">
-				<h2>Properties</h2>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class">
-					<a name="name" class="tsd-anchor"></a>
-					<h3>name</h3>
-					<div class="tsd-signature tsd-kind-icon">name<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
-					<aside class="tsd-sources">
-						<p>Implementation of <a href="../interfaces/environment.iregioninfo.html">IRegionInfo</a>.<a href="../interfaces/environment.iregioninfo.html#name">name</a></p>
-						<ul>
-							<li>Defined in environment.ts:294</li>
-						</ul>
-					</aside>
-					<div class="tsd-comment tsd-typography">
-						<div class="lead">
-							<p>Gets the name or ISO 3166 two-letter country/region code.</p>
-						</div>
-					</div>
-				</section>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class">
-					<a name="threeletterisoregionname" class="tsd-anchor"></a>
-					<h3>three<wbr>LetterISORegion<wbr>Name</h3>
-					<div class="tsd-signature tsd-kind-icon">three<wbr>LetterISORegion<wbr>Name<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
-					<aside class="tsd-sources">
-						<p>Implementation of <a href="../interfaces/environment.iregioninfo.html">IRegionInfo</a>.<a href="../interfaces/environment.iregioninfo.html#threeletterisoregionname">threeLetterISORegionName</a></p>
-						<ul>
-							<li>Defined in environment.ts:304</li>
-						</ul>
-					</aside>
-					<div class="tsd-comment tsd-typography">
-						<div class="lead">
-							<p>Gets the three-letter code defined in ISO 3166 for the country/region.</p>
-						</div>
-					</div>
-				</section>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class">
-					<a name="twoletterisoregionname" class="tsd-anchor"></a>
-					<h3>two<wbr>LetterISORegion<wbr>Name</h3>
-					<div class="tsd-signature tsd-kind-icon">two<wbr>LetterISORegion<wbr>Name<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
-					<aside class="tsd-sources">
-						<p>Implementation of <a href="../interfaces/environment.iregioninfo.html">IRegionInfo</a>.<a href="../interfaces/environment.iregioninfo.html#twoletterisoregionname">twoLetterISORegionName</a></p>
-						<ul>
-							<li>Defined in environment.ts:299</li>
-						</ul>
-					</aside>
-					<div class="tsd-comment tsd-typography">
-						<div class="lead">
-							<p>Gets the two-letter code defined in ISO 3166 for the country/region.</p>
-						</div>
-					</div>
-				</section>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class tsd-is-static">
-					<a name="currentregion" class="tsd-anchor"></a>
-					<h3><span class="tsd-flag ts-flagStatic">Static</span> current<wbr>Region</h3>
-					<div class="tsd-signature tsd-kind-icon">current<wbr>Region<span class="tsd-signature-symbol">:</span> <a href="../interfaces/environment.iregioninfo.html" class="tsd-signature-type">IRegionInfo</a><span class="tsd-signature-symbol"> =&nbsp;new SystemRegionInfo(currentNativeRegion.Name, currentNativeRegion.TwoLetterISORegionName, currentNativeRegion.ThreeLetterISORegionName)</span></div>
+				<h2>Enumeration members</h2>
+				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
+					<a name="linear" class="tsd-anchor"></a>
+					<h3>Linear</h3>
+					<div class="tsd-signature tsd-kind-icon">Linear<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;0</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in environment.ts:289</li>
+							<li>Defined in data/plot.ts:55</li>
 						</ul>
 					</aside>
-					<div class="tsd-comment tsd-typography">
-						<div class="lead">
-							<p>Gets the region in which the host application was started.</p>
-						</div>
-					</div>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
+					<a name="radial" class="tsd-anchor"></a>
+					<h3>Radial</h3>
+					<div class="tsd-signature tsd-kind-icon">Radial<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;1</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in data/plot.ts:56</li>
+						</ul>
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
+					<a name="rectangular" class="tsd-anchor"></a>
+					<h3>Rectangular</h3>
+					<div class="tsd-signature tsd-kind-icon">Rectangular<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;2</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in data/plot.ts:57</li>
+						</ul>
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
+					<a name="spatial" class="tsd-anchor"></a>
+					<h3>Spatial</h3>
+					<div class="tsd-signature tsd-kind-icon">Spatial<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;3</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in data/plot.ts:58</li>
+						</ul>
+					</aside>
 				</section>
 			</section>
 		</div>
@@ -222,13 +140,18 @@
 					<li class=" tsd-kind-external-module">
 						<a href="../modules/index.html">Index</a>
 					</li>
-					<li class=" tsd-kind-external-module">
+					<li class="current tsd-kind-external-module">
 						<a href="../modules/data.html">data</a>
+						<ul>
+							<li class=" tsd-kind-module tsd-parent-kind-external-module">
+								<a href="../modules/data.wellknownkeys.html">Well<wbr>Known<wbr>Keys</a>
+							</li>
+						</ul>
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="../modules/drawing.html">drawing</a>
 					</li>
-					<li class="current tsd-kind-external-module">
+					<li class=" tsd-kind-external-module">
 						<a href="../modules/environment.html">environment</a>
 					</li>
 					<li class=" tsd-kind-external-module">
@@ -261,23 +184,20 @@
 				<ul class="before-current">
 				</ul>
 				<ul class="current">
-					<li class="current tsd-kind-class tsd-parent-kind-external-module">
-						<a href="environment.regioninfo.html" class="tsd-kind-icon">Region<wbr>Info</a>
+					<li class="current tsd-kind-enum tsd-parent-kind-external-module tsd-is-private">
+						<a href="data.plottolerancetypeid.html" class="tsd-kind-icon">Plot<wbr>Tolerance<wbr>Type<wbr>Id</a>
 						<ul>
-							<li class=" tsd-kind-constructor tsd-parent-kind-class">
-								<a href="environment.regioninfo.html#constructor" class="tsd-kind-icon">constructor</a>
+							<li class=" tsd-kind-enum-member tsd-parent-kind-enum">
+								<a href="data.plottolerancetypeid.html#linear" class="tsd-kind-icon">Linear</a>
 							</li>
-							<li class=" tsd-kind-property tsd-parent-kind-class">
-								<a href="environment.regioninfo.html#name" class="tsd-kind-icon">name</a>
+							<li class=" tsd-kind-enum-member tsd-parent-kind-enum">
+								<a href="data.plottolerancetypeid.html#radial" class="tsd-kind-icon">Radial</a>
 							</li>
-							<li class=" tsd-kind-property tsd-parent-kind-class">
-								<a href="environment.regioninfo.html#threeletterisoregionname" class="tsd-kind-icon">three<wbr>LetterISORegion<wbr>Name</a>
+							<li class=" tsd-kind-enum-member tsd-parent-kind-enum">
+								<a href="data.plottolerancetypeid.html#rectangular" class="tsd-kind-icon">Rectangular</a>
 							</li>
-							<li class=" tsd-kind-property tsd-parent-kind-class">
-								<a href="environment.regioninfo.html#twoletterisoregionname" class="tsd-kind-icon">two<wbr>LetterISORegion<wbr>Name</a>
-							</li>
-							<li class=" tsd-kind-property tsd-parent-kind-class tsd-is-static">
-								<a href="environment.regioninfo.html#currentregion" class="tsd-kind-icon">current<wbr>Region</a>
+							<li class=" tsd-kind-enum-member tsd-parent-kind-enum">
+								<a href="data.plottolerancetypeid.html#spatial" class="tsd-kind-icon">Spatial</a>
 							</li>
 						</ul>
 					</li>
